hphp/test/slow/sealed/sealed_enum_classes1.php.expectf
Fatal error: Class Foo may not inherit from sealed class (Base) without being in the whitelist in %s/sealed_enum_classes1.php on line 12
